[tool.poetry]
name = "dotfiles"
version = "0.2.0"
description = ""
authors = ["Jim Fitzpatrick <jfitzpat@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
psutil = "^5.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
